# PandoraSDK

./: CMakeLists.txt
cmake/: PandoraSDKConfig.cmake.in  PandoraSDKConfigVersion.cmake.in
include/Pandora/: Pandora.h  PandoraEnumeratedTypes.h
src/: CMakeLists.txt
src/Api/: CMakeLists.txt
src/Geometry/: CMakeLists.txt
src/Helpers/: CMakeLists.txt
src/Managers/: CMakeLists.txt
src/Objects/: CMakeLists.txt  CaloHit.cc
src/Pandora/: CMakeLists.txt  Pandora.cc
src/Persistency/: CMakeLists.txt
src/Plugins/: CMakeLists.txt
src/Templates/: CMakeLists.txt
src/Xml/: CMakeLists.txt  tinyxmlparser.cc
